[gd_scene load_steps=29 format=2]

[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_15.png" type="Texture" id=1]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_6.png" type="Texture" id=2]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_4.png" type="Texture" id=3]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_6.png" type="Texture" id=4]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_3.png" type="Texture" id=5]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_9.png" type="Texture" id=6]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_2.png" type="Texture" id=7]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_2.png" type="Texture" id=8]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_7.png" type="Texture" id=9]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_8.png" type="Texture" id=10]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_13.png" type="Texture" id=11]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_9.png" type="Texture" id=12]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_3.png" type="Texture" id=13]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_14.png" type="Texture" id=14]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_10.png" type="Texture" id=15]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_11.png" type="Texture" id=16]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_5.png" type="Texture" id=17]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_4.png" type="Texture" id=18]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_1.png" type="Texture" id=19]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_1.png" type="Texture" id=20]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_10.png" type="Texture" id=21]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_5.png" type="Texture" id=22]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_8.png" type="Texture" id=23]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_7.png" type="Texture" id=24]
[ext_resource path="res://Scenes/Minigames/Throwgarbage/Cat.gd" type="Script" id=25]
[ext_resource path="res://Assets/Sounds/Catmeow.mp3" type="AudioStream" id=26]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 22 ), ExtResource( 2 ), ExtResource( 24 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 8 ), ExtResource( 13 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 23 ), ExtResource( 6 ), ExtResource( 21 ) ],
"loop": true,
"name": "hiss",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 447.004

[node name="Cat" type="Node2D"]
position = Vector2( 660, 537 )
script = ExtResource( 25 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "hiss"
frame = 4

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -71, -6 )
shape = SubResource( 2 )

[node name="CatHiss" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
